--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ jekyll-archives:
     tag: '/tag/:name/'
 
 # Disqus comments
-# disqus_shortname: bencentra
+disqus_shortname: dongyBlog
 
 # Google analytics
 # ga_tracking_id: "UA-XXXX-1"
@@ -79,7 +79,7 @@ social:
 
   - name: Facebook
     icon: facebook
-    username: thebencentra
+    username:
     url:
     desc: Friend me on Facebook
     share: true
@@ -87,14 +87,14 @@ social:
   - name: GitHub
     icon: github
     username: bencentra
-    url: https://github.com/bencentra
+    url: https://github.com/dongyyy
     desc: Fork me on GitHub
     share: false
 
   - name: LinkedIn
     icon: linkedin
-    username: Ben Centra
-    url: https://www.linkedin.com/pub/ben-centra/47/769/60a
+    username:
+    url:
     desc: Connect with me on LinkedIn
     share: true
 
