--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ jekyll-archives:
     tag: '/tag/:name/'
 
 # Disqus comments
-disqus_shortname: "dongybrog-1"
+disqus_shortname: "dongybrog"
 
 # Google analytics
 # ga_tracking_id: "UA-XXXX-1"
