--- a/_config.yml
+++ b/_config.yml
@@ -14,19 +14,19 @@ subtitle: 영어의 문을 열어드립니다.
 email: minssan9@gmail.com
 name: Mike
 description: 
-필리핀 원어민 전화영어 서비스 영어문입니다!
+# 필리핀 원어민 전화영어 서비스 영어문입니다!
 
-양질의 통화를 위해 Skype 설치 및 가입이 필요합니다.
-https://skype.daesung.com/main.asp
+# 양질의 통화를 위해 Skype 설치 및 가입이 필요합니다.
+# https://skype.daesung.com/main.asp
 
-앱 다운로드
-iphone - https://apps.apple.com/kr/app/iphoneyong-skype/id304878510
-android - https://play.google.com/store/apps/details?id=com.skype.raider&hl=ko
+# 앱 다운로드
+# iphone - https://apps.apple.com/kr/app/iphoneyong-skype/id304878510
+# android - https://play.google.com/store/apps/details?id=com.skype.raider&hl=ko
 
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
-baseurl: # the subpath of your site, e.g. /blog/
+baseurl: "https://minssan9.github.io"
 url: "https://minssan9.github.io" # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
 logo: "/assets/logo.png"
@@ -95,7 +95,7 @@ social:
   - name: GitHub
     icon: github
     username: bencentra
-    url: https://github.com/dongyyy
+    url: https://github.com/minssan9
     desc: Fork me on GitHub
     share: false
 
@@ -123,7 +123,7 @@ social:
   - name: Instagram
     icon: instagram
     username: english.door
-    url:https://instagram.com/english.door
+    url: https://instagram.com/english.door
     desc: Follow me on Instagram
     share: false
 
