--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,10 @@ email: minssan9@gmail.com
 name: Mike
 description: 
 # 필리핀 원어민 전화영어 서비스 영어문입니다!
+상호명 : 영어문
+대표자명 : 한윤숙
+사업자등록번호 : 390-07-01460
 
-# 양질의 통화를 위해 Skype 설치 및 가입이 필요합니다.
-# https://skype.daesung.com/main.asp
-
-# 앱 다운로드
-# iphone - https://apps.apple.com/kr/app/iphoneyong-skype/id304878510
-# android - https://play.google.com/store/apps/details?id=com.skype.raider&hl=ko
 
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
