--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ exclude:
 # Site settings
 title: 영어문
 subtitle: 영어의 문을 열어드립니다.
-email: minssan9@gmail.com
-name: Mike
+email: en9door@gmail.com
+name: Han
 description: 
 # 필리핀 원어민 전화영어 서비스 영어문입니다!
 상호명 : 영어문
